--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -58,9 +58,7 @@ workflows:
             -exportOptionsPlist $CM_BUILD_DIR/exportOptions.plist
 
     artifacts:
-      - build/ipa/*.ipa
-      - build/Release-iphoneos/*.app
-
+      - /Users/builder/Library/Developer/Xcode/DerivedData/**/Build/Products/Release-iphoneos/*.app
     publishing:
       email:
         recipients:
